updated template and merge changes affect all pages

--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html
+  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/index.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
+    <!-- InstanceBeginEditable name="doctitle" -->
     <title>FITSEC - CTF</title>
+	<!-- InstanceEndEditable -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css">
 
     <link href="img/FITSECCrest.png" rel="icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"></script>
     <link href="scripts/main.css" rel="stylesheet" type="text/css" />
+    <!-- InstanceBeginEditable name="head" -->
+    <!-- InstanceEndEditable -->
 </head>
 
 <body class='pt-5' onload="genBackground()">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light shadow-lg">
         <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <a class="navbar-brand" href="index.html">
                     <img class='nav-image' src="img/FITSECCrest.png" height="50" />
@@ -24,7 +27,6 @@
                 <a class="navbar-brand" href="index.html">FITSEC</a>
             </div>
             <button type="button" class="navbar-toggler collapsed float-right" data-toggle="collapse" data-target="#topFixedNavbar1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="topFixedNavbar1">
                 <ul class="navbar-nav nav-fill w-100">
                     <li class="nav-item dropdown mx-3">
@@ -55,9 +57,7 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container-fluid -->
     </nav>
 
     <div id="background">
@@ -67,7 +67,7 @@
     <div class='fluid-container mt-3 mb-3' id="">
         <div class='row'>
             <div class='col-10 offset-1 bg-light text-center'>
-                <!-- InstanceBeginEditable name="Mainpage" -->
+            <!-- InstanceBeginEditable name="Mainpage" -->
                 <br />
                 <h1>FITSEC Homepage</h1>
                 <br />
@@ -76,7 +76,7 @@
                         <img src="img/FITSECLogo.png" alt="FITSEC Official Logo" width='95%' class='rounded mx-auto d-block' />
                     </div>
                 </div>
-                <br>
+                <br />
                 <div class='px-5'>
                     <h2>Offensive and Defensive Cybsersecurity</h2>
                     <p>FITSEC is Florida Tech's Cyber Security team who is focused on competing in Capture the Flag and Collegiate Cyber Defense Competitions. Not only do we offer students the opportunity to hone their skills with respect to hacking and counter-hacking,
@@ -96,6 +96,5 @@
     <script src="scripts/backgroundGen.js"></script>
 </body>
 
-<!-- InstanceEnd -->
 
-</html>
+<!-- InstanceEnd --></html>
