--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
             <div class="collapse navbar-collapse" id="topFixedNavbar1">
                 <ul class="navbar-nav nav-fill w-100">
                     <li class="nav-item dropdown mx-3">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">About Us</a>
+                        <a href="about.html" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">About Us</a>
                         <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                            <a class='dropdown-item' href="defensiveSecurity.html">Defensive</a>
-                            <a class='dropdown-item' href="offensiveSecurity.html">Offensive</a>
-                            <a class='dropdown-item' href="faq.html">FAQ</a>
+                            <a class='dropdown-item' href="about.html#defensive">Defensive</a>
+                            <a class='dropdown-item' href="about.html#offensive">Offensive</a>
+                            <a class='dropdown-item' href="about.html#faq">FAQ</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown mx-3">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Whats Going On</a>
+                        <a href="whatsgoingon.html" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Whats Going On</a>
                         <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                            <a class='dropdown-item' href="calendar.html">Calendar</a>
-                            <a class='dropdown-item' href="competitions.html">Competitions</a>
-                            <a class='dropdown-item' href="meetings.html">Meetings</a>
-                            <a class='dropdown-item' href="workshops.html">Workshops</a>
+                            <a class='dropdown-item' href="whatsgoingon.html#calendar">Calendar</a>
+                            <a class='dropdown-item' href="whatsgoingon.html#competitions">Competitions</a>
+                            <a class='dropdown-item' href="whatsgoingon.html#meetings">Meetings</a>
+                            <a class='dropdown-item' href="whatsgoingon.html#workshops">Workshops</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown mx-3">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Write Ups</a>
                         <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                            <a class='dropdown-item' href="defensiveSecurity.html">2019</a>
+                            <a class='dropdown-item' href="aboutus.html">2019</a>
                         </div>
                     </li>
                     <li class='nav-item mx-3'>
