--- a/whatsgoingon.html
+++ b/whatsgoingon.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!-- InstanceBeginEditable name="doctitle" -->
-    <title>FITSEC - Workshops</title>
+    <title>FITSEC - What's Going On</title>
     <!-- InstanceEndEditable -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css">
 
@@ -30,26 +30,26 @@
             <div class="collapse navbar-collapse" id="topFixedNavbar1">
                 <ul class="navbar-nav nav-fill w-100">
                     <li class="nav-item dropdown mx-3">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">About Us</a>
+                        <a href="about.html" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">About Us</a>
                         <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                            <a class='dropdown-item' href="defensiveSecurity.html">Defensive</a>
-                            <a class='dropdown-item' href="offensiveSecurity.html">Offensive</a>
-                            <a class='dropdown-item' href="faq.html">FAQ</a>
+                            <a class='dropdown-item' href="about.html#defensive">Defensive</a>
+                            <a class='dropdown-item' href="about.html#offensive">Offensive</a>
+                            <a class='dropdown-item' href="about.html#faq">FAQ</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown mx-3">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Whats Going On</a>
+                        <a href="whatsgoingon.html" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Whats Going On</a>
                         <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                            <a class='dropdown-item' href="calendar.html">Calendar</a>
-                            <a class='dropdown-item' href="competitions.html">Competitions</a>
-                            <a class='dropdown-item' href="meetings.html">Meetings</a>
-                            <a class='dropdown-item' href="workshops.html">Workshops</a>
+                            <a class='dropdown-item' href="whatsgoingon.html#calendar">Calendar</a>
+                            <a class='dropdown-item' href="whatsgoingon.html#competitions">Competitions</a>
+                            <a class='dropdown-item' href="whatsgoingon.html#meetings">Meetings</a>
+                            <a class='dropdown-item' href="whatsgoingon.html#workshops">Workshops</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown mx-3">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Write Ups</a>
                         <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                            <a class='dropdown-item' href="defensiveSecurity.html">2019</a>
+                            <a class='dropdown-item' href="aboutus.html">2019</a>
                         </div>
                     </li>
                     <li class='nav-item mx-3'>
@@ -68,8 +68,21 @@
         <div class='row'>
             <div class='col-10 offset-1 bg-light text-center'>
             <!-- InstanceBeginEditable name="Mainpage" -->
-            <h1>FITSEC Homepage</h1>
+            <h1>Here's whats going on</h1>
             <p>This is currently a work in progress. will be setup soon</p>
+            <hr />
+            <h1 id="calendar">Calendar</h1>
+            <!-- add calendar /-->
+            <br />
+            <hr />
+            <h1 id="competitions">Competitions</h1>
+            <p>Some info about what ctfs were competing in</p>
+            <hr />
+            <h1 id="meetings">Meetings</h1>
+            <p>More INFO to add</p>
+            <hr />
+            <h1 id="workshops">Workshops</h1>
+            <p>Add content for our workshops</p>
             <!-- InstanceEndEditable -->
             </div>
         </div>
