--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a class="navbar-brand" href="index.html">
                     <img class='nav-image' src="img/FITSECCrest.png" height="50" />
                 </a>
-                <a class="navbar-brand" href="index.html">FITSEC</a>
+                <a class="navbar-brand" href="index.html">FiTSEC</a>
             </div>
             <button type="button" class="navbar-toggler collapsed float-right" data-toggle="collapse" data-target="#topFixedNavbar1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="topFixedNavbar1">
@@ -69,7 +69,7 @@
             <div class='col-10 offset-1 bg-light text-center'>
             <!-- InstanceBeginEditable name="Mainpage" -->
                 <br />
-                <h1>FITSEC Homepage</h1>
+                <h1>FiTSEC Homepage</h1>
                 <br />
                 <div class='row justify-content-center'>
                     <div class='col-xl-6 col-xl-offset-3 col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-12 col-12'>
