--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                 <a class="navbar-brand" href="index.html">
                     <img class='nav-image' src="img/FITSECCrest.png" height="50" />
                 </a>
-                <a class="navbar-brand" href="index.html">FITSEC</a>
+                <a class="navbar-brand" href="index.html">FiTSEC</a>
             </div>
             <button type="button" class="navbar-toggler collapsed float-right" data-toggle="collapse" data-target="#topFixedNavbar1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="topFixedNavbar1">
