--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <br />
                 <div class='row justify-content-center'>
                     <div class='col-xl-6 col-xl-offset-3 col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-12 col-12'>
-                        <img src="img/FITSECLogo.png" alt="FITSEC Official Logo" width='95%' class='rounded mx-auto d-block' />
+                        <img src="img/pantherChevronColor4.png" alt="FITSEC Official Logo" width='95%' class='rounded mx-auto d-block' />
                     </div>
                 </div>
                 <br />
