Split up whats going on

--- a/meetings.html
+++ b/meetings.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!-- InstanceBeginEditable name="doctitle" -->
-    <title>FITSEC - Contact Us</title>
+    <title>FITSEC - Meetings</title>
     <!-- InstanceEndEditable -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css">
 
@@ -68,13 +68,8 @@
         <div class='row'>
             <div class='col-10 offset-1 bg-light text-center'>
             <!-- InstanceBeginEditable name="Mainpage" -->
-            <h1>Contact Us</h1>
-            <p>We're happy to hear some of your feedback.</p>
-            <br /><hr />
-            <h2>Add a Suggestion</h2>
-            <p>We want to hear from you. If you have something that you wish to see in the team, add an anonymous suggestion to the suggestion box, and we'll look over it as soon as possible.</p>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSekPLGFzOPbxHUUqwPHe2IQifLxWoENmXQLnmqVzbU6KbQ5bQ/viewform?embedded=true" width="60%" height="500px" minheight="450px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-            <br style="clear:both;" />
+            <h1>FiTSEC Homepage</h1>
+            <p>This is currently a work in progress. will be setup soon</p>
             <!-- InstanceEndEditable -->
             </div>
         </div>
