added text from josh part 1

--- a/index.html
+++ b/index.html
@@ -79,12 +79,7 @@
                 <br />
                 <div class='px-5'>
                     <h2>Offensive and Defensive Cybsersecurity</h2>
-                    <p>FITSEC is Florida Tech's Cyber Security team who is focused on competing in Capture the Flag and Collegiate Cyber Defense Competitions. Not only do we offer students the opportunity to hone their skills with respect to hacking and counter-hacking,
-                        but we also are building connections with industry to provide a pathway for potential employment opportunities. We believe the best way to stop a hacker is to know their methods.</p>
-                    <h3>CTF (Capture the Flag)</h3>
-                    <p>More INFO Here</p>
-                    <h3>CCDC (Collegiate Cyber Defense Competition)</h3>
-                    <p>More INFO Here</p>
+                    <p>FITSEC is Florida Tech's Cyber Security team who is focused on competing in Capture the Flag and Collegiate Cyber Defense Competitions. Not only do we offer students the opportunity to hone their skills with respect to hacking and counter-hacking,<br />but we also are building connections with industry to provide a pathway for potential employment opportunities. We believe the best way to stop a hacker is to know their methods.</p>
                     <p>FITSEC @ Florida Tech</p>
                 </div>
                 <!-- InstanceEndEditable -->
