--- a/about.html
+++ b/about.html
@@ -68,14 +68,20 @@
         <div class='row'>
             <div class='col-10 offset-1 bg-light text-center'>
             <!-- InstanceBeginEditable name="Mainpage" -->
+            <br /><br />
             <h1>About us</h1>
-            <p>INFO Required here</p>
+            <p>FITSEC is Florida Tech's Cyber Security team who is focused on competing in Cybersecurity competitions. Not only do we offer students the opportunity to hone their skills with respect to hacking and counter-hacking, but we also are building connections with industry to provide a pathway for potential employment opportunities. We believe the best way to stop a hacker is to know their methods.</p>
             <hr />
             <h1 id="defensive">Defensive Team</h1>
-            <p>INFO Required here</p>
+            <h3>CCDC (Collegiate Cyber Defense Competition)</h3>
+            <p>Cyber Defense competitions revolve around keeping a red team out of the network through various defensive methodologies and technologies. Some competitions such as Hivestorm are focused on patching and reconfiguring vulnerable machines. All defensive competitions are fast-paced and require tenacity and quick thinking. Florida Tech offers a Cyber Defense course that helps students prepare for careers in securing networks from hackers.</p>
             <hr />
             <h1 id="offensive">Offensive Team</h1>
-            <p>INFO Required Here</p>
+            <h3>CTF (Capture the Flag)</h3>
+            <p>Capture the flag competitions pit teams against each other in a race against time to solve as many security related challenges as possible. CTFs are typically exploit based, however, some CTFs are defensive as well. The most typical style of CTF that FITSEC competes in are jeopardy-style CTFs where competitors analyze web applications and programs in order to retrieve flags through various means. These flags are then submitted for points to climb scoreboard. Courses that are offered at Florida Tech that help build the foundation necessary to tackle these problems include Introduction to Cybersecurity, Introduction to Reverse Engineering, and Introduction to Vulnerability Research.</p>
+            <br />
+            <h3>Penetration Testing and Red Teaming</h3>
+            <p>Penetration testing competitions are aimed towards identifying vulnerabilities in a network and exploiting them to gain additional footholds and establish persistence. The same methodologies used by hackers are used to test networks. These exercises end in the pen testing team writing a report based on their findings where they can recommend to the blue team how best to update their security. For red teaming events, the red team plays against a live blue team where they actively try to keep the red team from gaining access.</p>
             <hr />
             <h1 id="faq">FAQ</h1>
             <p>Ask for questions</p>
