Added calendar; padded paragraph texts

--- a/calendar.html
+++ b/calendar.html
@@ -68,7 +68,8 @@
         <div class='row'>
             <div class='col-10 offset-1 bg-light text-center'>
             <!-- InstanceBeginEditable name="Mainpage" -->
-            <h1>FiTSEC Homepage</h1>
+            <h1>FiTSEC Calendar</h1>
+            <iframe src="https://calendar.google.com/calendar/embed?src=my.fit.edu_p2sgcoekt330md710eckhsiie4%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             <p>This is currently a work in progress. will be setup soon</p>
             <!-- InstanceEndEditable -->
             </div>
