--- a/about.html
+++ b/about.html
@@ -1,98 +1,148 @@
-<!DOCTYPE html
-  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/index.dwt" codeOutsideHTMLIsLocked="false" -->
-
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <!-- InstanceBegin template="/Templates/index.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />
     <!-- InstanceBeginEditable name="doctitle" -->
     <title>FITSEC - About Us</title>
     <!-- InstanceEndEditable -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" />
     <link href="img/FITSECCrest.png" rel="icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"></script>
     <link href="scripts/main.css" rel="stylesheet" type="text/css" />
     <!-- InstanceBeginEditable name="head" -->
     <!-- InstanceEndEditable -->
-</head>
-
-<body class='pt-5' onload="genBackground()">
+  </head>
+  <body class="pt-5" onload="genBackground()">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light shadow-lg">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="index.html">
-                    <img class='nav-image' src="img/FITSECCrest.png" height="50" />
-                </a>
-                <a class="navbar-brand" href="index.html">FiTSEC</a>
-            </div>
-            <button type="button" class="navbar-toggler collapsed float-right" data-toggle="collapse" data-target="#topFixedNavbar1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="topFixedNavbar1">
-                <ul class="navbar-nav nav-fill w-100">
-                    <li class="nav-item dropdown mx-3">
-                        <a href="about.html" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">About Us</a>
-                        <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                            <a class='dropdown-item' href="about.html#defensive">Defensive</a>
-                            <a class='dropdown-item' href="about.html#offensive">Offensive</a>
-                            <a class='dropdown-item' href="about.html#faq">FAQ</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown mx-3">
-                        <a href="calendar.html" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Whats Going On</a>
-                        <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                            <a class='dropdown-item' href="calendar.html">Calendar</a>
-                            <a class='dropdown-item' href="competitions.html">Competitions</a>
-                            <a class='dropdown-item' href="meetings.html">Meetings</a>
-                            <a class='dropdown-item' href="workshops.html">Workshops</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown mx-3">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Write Ups</a>
-                        <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                            <a class='dropdown-item' href="#">2019</a>
-                        </div>
-                    </li>
-                    <li class='nav-item mx-3'>
-                        <a href="contact.html" class='nav-link' role='button'>Contact Us</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container-fluid">
+        <div class="navbar-header"> <a class="navbar-brand" href="index.html">
+            <img class="nav-image" src="img/FITSECCrest.png" height="50" /> </a>
+          <a class="navbar-brand" href="index.html">FiTSEC</a> </div>
+        <button type="button" class="navbar-toggler collapsed float-right" data-toggle="collapse"
+          data-target="#topFixedNavbar1"><span
+            class="sr-only">Toggle
+            navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="topFixedNavbar1">
+          <ul class="navbar-nav nav-fill w-100">
+            <li class="nav-item dropdown mx-3"> <a href="about.html" class="nav-link dropdown-toggle"
+                data-toggle="dropdown"
+                role="button">About
+                Us</a>
+              <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="about.html#defensive">Defensive</a>
+                <a class="dropdown-item" href="about.html#offensive">Offensive</a>
+                <a class="dropdown-item" href="about.html#faq">FAQ</a> </div>
+            </li>
+            <li class="nav-item dropdown mx-3"> <a href="calendar.html" class="nav-link dropdown-toggle"
+                data-toggle="dropdown"
+                role="button">Whats
+                Going On</a>
+              <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="calendar.html">Calendar</a> <a class="dropdown-item"
+                  href="competitions.html">Competitions</a>
+                <a class="dropdown-item" href="meetings.html">Meetings</a> <a class="dropdown-item"
+                  href="workshops.html">Workshops</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown mx-3"> <a href="#" class="nav-link dropdown-toggle"
+                data-toggle="dropdown"
+                role="button">Write
+                Ups</a>
+              <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#">2019</a> </div>
+            </li>
+            <li class="nav-item mx-3"> <a href="contact.html" class="nav-link"
+                role="button">Contact
+                Us</a> </li>
+          </ul>
         </div>
+      </div>
     </nav>
-
     <div id="background">
-        <p id="bgCode"></p>
+      <p id="bgCode"></p>
     </div>
-
-    <div class='fluid-container mt-3 mb-3' id="">
-        <div class='row'>
-            <div class='col-10 offset-1 bg-light text-center'>
-            <!-- InstanceBeginEditable name="Mainpage" -->
-            <br /><br />
-            <h1>About us</h1>
-            <p>FITSEC is Florida Tech's Cyber Security team who is focused on competing in Cybersecurity competitions. Not only do we offer students the opportunity to hone their skills with respect to hacking and counter-hacking, but we also are building connections with industry to provide a pathway for potential employment opportunities. We believe the best way to stop a hacker is to know their methods.</p>
-            <hr />
-            <h1 id="defensive">Defensive Team</h1>
-            <h3>CCDC (Collegiate Cyber Defense Competition)</h3>
-            <p>Cyber Defense competitions revolve around keeping a red team out of the network through various defensive methodologies and technologies. Some competitions such as Hivestorm are focused on patching and reconfiguring vulnerable machines. All defensive competitions are fast-paced and require tenacity and quick thinking. Florida Tech offers a Cyber Defense course that helps students prepare for careers in securing networks from hackers.</p>
-            <hr />
-            <h1 id="offensive">Offensive Team</h1>
-            <h3>CTF (Capture the Flag)</h3>
-            <p>Capture the flag competitions pit teams against each other in a race against time to solve as many security related challenges as possible. CTFs are typically exploit based, however, some CTFs are defensive as well. The most typical style of CTF that FITSEC competes in are jeopardy-style CTFs where competitors analyze web applications and programs in order to retrieve flags through various means. These flags are then submitted for points to climb scoreboard. Courses that are offered at Florida Tech that help build the foundation necessary to tackle these problems include Introduction to Cybersecurity, Introduction to Reverse Engineering, and Introduction to Vulnerability Research.</p>
+    <div class="fluid-container mt-3 mb-3" id="">
+      <div class="row">
+        <div class="col-10 offset-1 bg-light text-center">
+          <!-- InstanceBeginEditable name="Mainpage" --> <br />
+          <br />
+          <h1>About us</h1>
+          <p>FITSEC is Florida Tech's Cyber Security team who is focused on
+            competing in Cybersecurity competitions. Not only do we offer
+            students the opportunity to hone their skills with respect to
+            hacking and counter-hacking, but we also are building connections
+            with industry to provide a pathway for potential employment
+            opportunities. We believe the best way to stop a hacker is to know
+            their methods.</p>
+          <hr />
+          <h1 id="defensive">Defensive Team</h1>
+          <br />
+          <h3>CYBER DEFENSE</h3>
+          <p>Cyber Defense competitions revolve around keeping a red team out of
+            the network through various defensive methodologies and
+            technologies. Some competitions such as Hivestorm are focused on
+            patching and reconfiguring vulnerable machines. All defensive
+            competitions are fast-paced and require tenacity and quick thinking.
+            Florida Tech offers a Cyber Defense course that helps students
+            prepare for careers in securing networks from hackers.</p>
+          <hr />
+          <h1 id="offensive">Offensive Team</h1>
+          <br />
+          <h3>CTF (Capture the Flag)</h3>
+          <p>Capture the flag competitions pit teams against each other in a
+            race against time to solve as many security related challenges as
+            possible. CTFs are typically exploit based, however, some CTFs are
+            defensive as well. The most typical style of CTF that FITSEC
+            competes in are jeopardy-style CTFs where competitors analyze web
+            applications and programs in order to retrieve flags through various
+            means. These flags are then submitted for points to climb
+            scoreboard. Courses that are offered at Florida Tech that help build
+            the foundation necessary to tackle these problems include
+            Introduction to Cybersecurity, Introduction to Reverse Engineering,
+            and Introduction to Vulnerability Research.</p>
+          <br />
+          <h3>Penetration Testing and Red Teaming</h3>
+          <p>Penetration testing competitions are aimed towards identifying
+            vulnerabilities in a network and exploiting them to gain additional
+            footholds and establish persistence. The same methodologies used by
+            hackers are used to test networks. These exercises end in the pen
+            testing team writing a report based on their findings where they can
+            recommend to the blue team how best to update their security. For
+            red teaming events, the red team plays against a live blue team
+            where they actively try to keep the red team from gaining access.</p>
+          <hr />
+          <h1 id="faq">FAQ</h1>
+          <p>
+            <ul>
+              <li>Q: Do I need experience to join?</li>
+              A: Nope! We have a training pipeline created to teach the basics
+              to newcomers. This pipeline gives each new member a solid
+              foundation that enables them to delve deeper into areas of
+              interest and specialize to be more of an asset to the team.
+              <li>Q: Do I need to be Computer Science to join?</li>
+              A: Absolutely not! Being a Computer Science or Computer
+              Engineering student definitely gives you a good start, but anyone
+              is capable of learning about cybersecurity. In fact, some of our
+              competitors have been Aerospace Engineers.
+              <li>Q: When does FITSEC meet?</li>
+              A: It varies per semester. We send out a poll early in the
+              semester to identify times that are the most convenient for the
+              members to maximize attendance.
+              <li>Q: Where does FITSEC meet?</li>
+              A: This has varied in the past, however, our permanent home is now
+              Crawford 524. This is the room for all cybersecurity classes and
+              also FITSEC's clubhouse.
+            </ul>
             <br />
-            <h3>Penetration Testing and Red Teaming</h3>
-            <p>Penetration testing competitions are aimed towards identifying vulnerabilities in a network and exploiting them to gain additional footholds and establish persistence. The same methodologies used by hackers are used to test networks. These exercises end in the pen testing team writing a report based on their findings where they can recommend to the blue team how best to update their security. For red teaming events, the red team plays against a live blue team where they actively try to keep the red team from gaining access.</p>
-            <hr />
-            <h1 id="faq">FAQ</h1>
-            <p>Ask for questions</p>
-            <!-- InstanceEndEditable -->
-            </div>
-        </div>
+          </p>
+          <!-- InstanceEndEditable --> </div>
+      </div>
     </div>
     <script src="scripts/main.js">
     </script>
     <script src="scripts/backgroundGen.js"></script>
-</body>
-
-
-<!-- InstanceEnd --></html>
+  </body>
+  <!-- InstanceEnd -->
+</html>
