--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
     </div>
     <div class="fluid-container mt-3 mb-3" id="">
       <div class="row">
-        <div class="col-10 offset-1 bg-light text-align">
+        <div class="col-10 offset-1 bg-light text-center">
           <!-- InstanceBeginEditable name="Mainpage" --> <br />
           <br />
           <h1>About us</h1>
