--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown mx-3">
-                        <a href="calendar.html" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Getting Involved</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Getting Involved</a>
                         <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
                             <a class='dropdown-item' href="calendar.html">Calendar</a>
                             <a class='dropdown-item' href="competitions.html">Competitions</a>
