--- a/calendar.html
+++ b/calendar.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="topFixedNavbar1">
                 <ul class="navbar-nav nav-fill w-100">
                     <li class="nav-item dropdown mx-3">
-                        <a href="about.html" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">About Us</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">About Us</a>
                         <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
                             <a class='dropdown-item' href="about.html#defensive">Defensive</a>
                             <a class='dropdown-item' href="about.html#offensive">Offensive</a>
