Alighned contact us when on that page

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                         </div>
                     </li>
                     <li class='nav-item mx-3'>
-                        <a href="contact.html" class='nav-link' role='button'>Contact Us</a>
+                        <a href="#" class='nav-link' role='button'>Contact Us</a>
                     </li>
                 </ul>
             </div>
