--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <li class="nav-item dropdown mx-3">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Write Ups</a>
                         <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                            <a class='dropdown-item' href="#">2019</a>
+                            <a class='dropdown-item' href="https://github.com/FITSEC/CTF-Writeups/tree/master/2019">2019</a>
                         </div>
                     </li>
                     <li class='nav-item mx-3'>
